--- a/style.css
+++ b/style.css
@@ -156,7 +156,8 @@ footer {
     width: 100%;
     bottom: 0;
     text-align: center;
-    background: #2b2a2a;
+    background: #28212e;
+    padding-block: 1rem;
     z-index: 1000;
 }
 
