--- a/style.css
+++ b/style.css
@@ -153,6 +153,7 @@ input:focus {
 
 footer {
     position: absolute;
+    position: fixed;
     width: 100%;
     bottom: 0;
     text-align: center;
